[package]
name = "plus485"
version = "0.1.0"
authors = ["Roberto Frenna <roberto.frenna@gmail.com>"]

[dependencies]
clap = "2.32"
futures = "0.1"
tokio-core = "0.1"
tokio-serial = "0.8"
tokio-modbus = { version = "0.2.2", default-features = false, features = ["rtu", "sync"] }
error-chain = "0.12"
tokio-timer = "0.2.6"

[patch.crates-io]
# Use the latest version of tokio-modbus
tokio-modbus = { git = "https://github.com/slowtec/tokio-modbus" }
